Fix button spacing in the participants tab
Use ButtonGroupWidget to remove horizontal spacing.

Toggle between hidden and visible states with a custom class, because
jQuery's methods are incorrectly guessing `display: inline`, whereas we
need `inline-block`. This caused the vertical alignment issue documented
in the task.

Bug: T346845

--- a/resources/ext.campaignEvents.specialeventdetails.styles.less
+++ b/resources/ext.campaignEvents.specialeventdetails.styles.less
@@ -309,10 +309,6 @@ fieldset.ext-campaignevents-details-email-form {
 	z-index: @z-index-tooltip;
 }
 
-.ext-campaignevents-event-details-remove-participant-button.oo-ui-buttonElement {
-	display: none;
-}
-
 .ext-campaignevents-details-stats-question-container {
 	border-bottom: @border-base;
 
@@ -384,6 +380,7 @@ fieldset.ext-campaignevents-details-email-form {
 }
 
 // This rule should come last so that it overrides other styles set in this file.
-.ext-campaignevents-details-hide-element {
+// Repeat the selector to increase specificity (e.g., for buttons).
+.ext-campaignevents-details-hide-element.ext-campaignevents-details-hide-element {
 	display: none;
 }
